--- a/index.html
+++ b/index.html
@@ -9,124 +9,124 @@
   <p>Жми на любую кнопку для проверки OAuth-ссылки:</p>
 
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8439314894&origin=https://github.com/dismoralic/bomb3r1&return_to=https://github.com/dismoralic/bomb3r1">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8439314894&origin=https://dismoralic.github.io/bomb3r1/&return_to=https://dismoralic.github.io/bomb3r1/">
       <button>Войти через Бота #1</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=7047150224&origin=https://github.com/dismoralic/bomb3r2&return_to=https://github.com/dismoralic/bomb3r2">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=7047150224&origin=https://dismoralic.github.io/bomb3r2/&return_to=https://dismoralic.github.io/bomb3r2/">
       <button>Войти через Бота #2</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8416128399&origin=https://github.com/dismoralic/bomb3r3&return_to=https://github.com/dismoralic/bomb3r3">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8416128399&origin=https://dismoralic.github.io/bomb3r3/&return_to=https://dismoralic.github.io/bomb3r3/">
       <button>Войти через Бота #3</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=7409205168&origin=https://github.com/dismoralic/bomb3r4&return_to=https://github.com/dismoralic/bomb3r4">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=7409205168&origin=https://dismoralic.github.io/bomb3r4/&return_to=https://dismoralic.github.io/bomb3r4/">
       <button>Войти через Бота #4</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8263972374&origin=https://github.com/dismoralic/bomb3r5&return_to=https://github.com/dismoralic/bomb3r5">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8263972374&origin=https://dismoralic.github.io/bomb3r5/&return_to=https://dismoralic.github.io/bomb3r5/">
       <button>Войти через Бота #5</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8061685501&origin=https://github.com/dismoralic/bomb3r6&return_to=https://github.com/dismoralic/bomb3r6">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8061685501&origin=https://dismoralic.github.io/bomb3r6/&return_to=https://dismoralic.github.io/bomb3r6/">
       <button>Войти через Бота #6</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8319455274&origin=https://github.com/dismoralic/bomb3r7&return_to=https://github.com/dismoralic/bomb3r7">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8319455274&origin=https://dismoralic.github.io/bomb3r7/&return_to=https://dismoralic.github.io/bomb3r7/">
       <button>Войти через Бота #7</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8345878824&origin=https://github.com/dismoralic/bomb3r8&return_to=https://github.com/dismoralic/bomb3r8">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8345878824&origin=https://dismoralic.github.io/bomb3r8/&return_to=https://dismoralic.github.io/bomb3r8/">
       <button>Войти через Бота #8</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8464227483&origin=https://github.com/dismoralic/bomb3r9&return_to=https://github.com/dismoralic/bomb3r9">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8464227483&origin=https://dismoralic.github.io/bomb3r9/&return_to=https://dismoralic.github.io/bomb3r9/">
       <button>Войти через Бота #9</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8495038996&origin=https://github.com/dismoralic/bomb3r10&return_to=https://github.com/dismoralic/bomb3r10">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8495038996&origin=https://dismoralic.github.io/bomb3r10/&return_to=https://dismoralic.github.io/bomb3r10/">
       <button>Войти через Бота #10</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8343324144&origin=https://github.com/dismoralic/bomb3r11&return_to=https://github.com/dismoralic/bomb3r11">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8343324144&origin=https://dismoralic.github.io/bomb3r11/&return_to=https://dismoralic.github.io/bomb3r11/">
       <button>Войти через Бота #11</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8392026983&origin=https://github.com/dismoralic/bomb3r12&return_to=https://github.com/dismoralic/bomb3r12">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8392026983&origin=https://dismoralic.github.io/bomb3r12/&return_to=https://dismoralic.github.io/bomb3r12/">
       <button>Войти через Бота #12</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8375040663&origin=https://github.com/dismoralic/bomb3r13&return_to=https://github.com/dismoralic/bomb3r13">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8375040663&origin=https://dismoralic.github.io/bomb3r13/&return_to=https://dismoralic.github.io/bomb3r13/">
       <button>Войти через Бота #13</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8394855642&origin=https://github.com/dismoralic/bomb3r14&return_to=https://github.com/dismoralic/bomb3r14">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8394855642&origin=https://dismoralic.github.io/bomb3r14/&return_to=https://dismoralic.github.io/bomb3r14/">
       <button>Войти через Бота #14</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8402454482&origin=https://github.com/dismoralic/bomb3r15&return_to=https://github.com/dismoralic/bomb3r15">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8402454482&origin=https://dismoralic.github.io/bomb3r15/&return_to=https://dismoralic.github.io/bomb3r15/">
       <button>Войти через Бота #15</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8475428068&origin=https://github.com/dismoralic/bomb3r16&return_to=https://github.com/dismoralic/bomb3r16">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8475428068&origin=https://dismoralic.github.io/bomb3r16/&return_to=https://dismoralic.github.io/bomb3r16/">
       <button>Войти через Бота #16</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8312380132&origin=https://github.com/dismoralic/bomb3r17&return_to=https://github.com/dismoralic/bomb3r17">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8312380132&origin=https://dismoralic.github.io/bomb3r17/&return_to=https://dismoralic.github.io/bomb3r17/">
       <button>Войти через Бота #17</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8283123885&origin=https://github.com/dismoralic/bomb3r18&return_to=https://github.com/dismoralic/bomb3r18">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8283123885&origin=https://dismoralic.github.io/bomb3r18/&return_to=https://dismoralic.github.io/bomb3r18/">
       <button>Войти через Бота #18</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=8299692679&origin=https://github.com/dismoralic/bomb3r19&return_to=https://github.com/dismoralic/bomb3r19">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=8299692679&origin=https://dismoralic.github.io/bomb3r19/&return_to=https://dismoralic.github.io/bomb3r19/">
       <button>Войти через Бота #19</button>
     </a>
   </p>
-
+  
   <p>
-    <a href="https://oauth.telegram.org/auth/request?bot_id=7978014324&origin=https://github.com/dismoralic/bomb3r20&return_to=https://github.com/dismoralic/bomb3r20">
+    <a href="https://oauth.telegram.org/auth/request?bot_id=7978014324&origin=https://dismoralic.github.io/bomb3r20/&return_to=https://dismoralic.github.io/bomb3r20/">
       <button>Войти через Бота #20</button>
     </a>
-  </p>
+  </p>  
 
 </body>
 </html>
